# master

./: .env.example  .gitignore  ACCOUNTING_ENGINE_ROUTE_FIX_REPORT.md  ACTION_APPROVAL_VALIDATION.md  ACTION_INTENT_ENGINE_REPORT.md  ACTIVE_COMPONENTS.md  ACTIVE_SOURCE_AUDIT.md  AGENT_CORE_AUDIT.md  AGENT_OS_IMPLEMENTATION_REPORT.md  APPROVAL_GATE_PROOF.md  APPROVAL_ORCHESTRATOR_REPORT.md  APPROVAL_PERSISTENCE_PROOF_V2.md  APPROVAL_SESSION_ISOLATION_PROOF.md  ARTIFACT_JOURNAL_AUDIT.md  ARTIFACT_REGISTRY_SPEC.md  ASANA_CONNECTOR_CERTIFICATION.md  AUDIT_APPROVAL_ENGINE.md  AUDIT_ASSET_REGISTRY.md  AUDIT_DEPARTMENT_RUNTIME.md  AUDIT_EVIDENCE_STORE.md  AUDIT_QA_RUNTIME.md  AUDIT_SELF_HEALING.md  AUDIT_TASK_ENGINE.md  AUTH_RUNTIME_SMOKE_REPORT.md  AUTH_SURFACE_AUDIT.md  AUTONOMOUS_COMPANY_MANAGEMENT.md  AUTONOMOUS_ENTERPRISE_ENGINE.md  AUTONOMOUS_EXECUTION_ENGINE.md  AUTONOMOUS_GROWTH_SIMULATION.md  AUTONOMY_INTERVENTION_REPORT.md  AUTONOMY_SCORECARD.md  AUTO_TASK_FROM_SIGNAL_PROOF.md  BAKUDAN_PAGE_ONE_PUSH.md  BEST_PRODUCTION_BRAIN_SELECTION.md  BRAIN_REGISTRY_REPORT.md  BRAIN_ROUTING_POLICY_OPENAI.md  BRAND_INTELLIGENCE_ENGINE.md  BURNIN_DAY30_CERTIFICATION.md  BURNIN_DAY_30_REPORT.md  BURNIN_MONITOR_VALIDATION_REPORT.md  (+467 more)
QA/Tester-QA/: .env.example  .gitignore  PROJECT_DNA.md  README.md  pyproject.toml
QA/Tester-QA/audit/: audit_log.jsonl
QA/Tester-QA/config/: projects.json  qa_audit.profile.json
QA/Tester-QA/docs/: QA_AUDIT_AUTHORITY.md
QA/Tester-QA/knowledge/: qa_memory.jsonl
QA/Tester-QA/reports/: browser-inspection-20260521-2037.md  sample-incident.md  (+1 more)
(+6314 files in other folders)
